--- a/nifi/tasks/main.yml
+++ b/nifi/tasks/main.yml
@@ -7,4 +7,4 @@
     state: directory
 
 - name: Downloading nifi
-  shell: cd /shark && wget -N https://www.apache.org/dyn/closer.lua?path=/nifi/1.13.2/nifi-1.13.2-bin.tar.gz
+  shell: cd /shark && wget -N https://mirror.olnevhost.net/pub/apache/nifi/1.13.2/nifi-1.13.2-bin.tar.gz
