--- a/nifi/tasks/main.yml
+++ b/nifi/tasks/main.yml
@@ -1,10 +1,3 @@
 ---
-- name: Creating shark working directory
-  file:
-    name: /shark
-    owner: shark
-    group: shark
-    state: directory
-
 - name: Downloading nifi
-  shell: cd /shark && wget -N https://mirror.olnevhost.net/pub/apache/nifi/1.13.2/nifi-1.13.2-bin.tar.gz
+  shell: cd /opt && wget -N https://mirror.olnevhost.net/pub/apache/nifi/1.13.2/nifi-1.13.2-bin.tar.gz
