--- a/nifi/files/nifi.properties
+++ b/nifi/files/nifi.properties
@@ -140,7 +140,7 @@ nifi.remote.contents.cache.expiration=30 secs
 # Be aware that changing these properties may affect how your instance can be accessed without any restriction.
 # We recommend configuring HTTPS instead. The administrators guide provides instructions on how to do this.
 
-nifi.web.http.host=127.0.0.1
+nifi.web.http.host={{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}
 nifi.web.http.port=8080
 nifi.web.http.network.interface.default=
 
