--- a/server-prep/tasks/main.yml
+++ b/server-prep/tasks/main.yml
@@ -24,7 +24,7 @@
    name: net-tools
    state: latest   
    
-- name: Install java (required for Apache Drill )
+- name: Install java (required for Apache Nifi )
   apt:
    name: default-jre
    state: latest
