--- a/nifi/tasks/main.yml
+++ b/nifi/tasks/main.yml
@@ -19,6 +19,12 @@
    name: default-jre
    state: latest
 
+- name: Deploying Flow Configuration
+  template:
+   src: flow.xml.gz
+   dest: /opt/nifi/conf/
+  notify: restart-nifi
+
 - name: Deploying config file
   template:
    src: nifi.properties
