--- a/nifi/tasks/main.yml
+++ b/nifi/tasks/main.yml
@@ -19,17 +19,17 @@
    name: default-jre
    state: latest
 
-- name: Deploying Flow Configuration
-  copy:
-   src: flow.xml.gz
-   dest: /opt/nifi/conf/
-  notify: restart-nifi
+#- name: Deploying Flow Configuration
+#  copy:
+#   src: flow.xml.gz
+#   dest: /opt/nifi/conf/
+#  notify: restart-nifi
 
-- name: Deploying config file
-  template:
-   src: nifi.properties
-   dest: /opt/nifi/conf
-  notify: restart-nifi
+#- name: Deploying config file
+#  template:
+#   src: nifi.properties
+#   dest: /opt/nifi/conf
+#  notify: restart-nifi
    
 - name: Install nifi 
   shell: cd /opt/nifi && bin/nifi.sh install
